[gd_scene load_steps=14 format=3 uid="uid://c5s4gbllsvdtq"]

[ext_resource type="Script" uid="uid://dffko6pjucv3g" path="res://move_z_axis.gd" id="1_ig7tw"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lquwl"]
albedo_color = Color(1, 0.108926, 0.0738671, 1)

[sub_resource type="BoxMesh" id="BoxMesh_7mycd"]
material = SubResource("StandardMaterial3D_lquwl")
size = Vector3(0.3, 0.05, 0.05)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_h2yge"]
albedo_color = Color(1.10219e-05, 0.965851, 7.70092e-07, 1)

[sub_resource type="BoxMesh" id="BoxMesh_1bvp3"]
material = SubResource("StandardMaterial3D_h2yge")
size = Vector3(0.05, 0.3, 0.05)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ig7tw"]
albedo_color = Color(0.236518, 0.459948, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_0xm2m"]
material = SubResource("StandardMaterial3D_ig7tw")
size = Vector3(0.05, 0.05, 0.3)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_7dm0k"]
height = 6.0
radius = 10.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7dm0k"]
cull_mode = 2

[sub_resource type="QuadMesh" id="QuadMesh_ig7tw"]
material = SubResource("StandardMaterial3D_7dm0k")

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_7dm0k"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_ig7tw"]
sky_material = SubResource("ProceduralSkyMaterial_7dm0k")

[sub_resource type="Environment" id="Environment_0xm2m"]
background_mode = 2
sky = SubResource("Sky_ig7tw")
tonemap_mode = 2

[node name="Main" type="Node3D"]

[node name="WindSourcePath" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.601423, 0)
script = ExtResource("1_ig7tw")

[node name="X" type="MeshInstance3D" parent="WindSourcePath"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.15, 0, 0)
mesh = SubResource("BoxMesh_7mycd")

[node name="Y" type="MeshInstance3D" parent="WindSourcePath"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0)
mesh = SubResource("BoxMesh_1bvp3")

[node name="Z" type="MeshInstance3D" parent="WindSourcePath"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.15)
mesh = SubResource("BoxMesh_0xm2m")

[node name="Area3DWind" type="Area3D" parent="."]
wind_force_magnitude = 30.0
wind_source_path = NodePath("../WindSourcePath")

[node name="WindHitbox" type="CollisionShape3D" parent="Area3DWind"]
shape = SubResource("CylinderShape3D_7dm0k")

[node name="SoftBody3D" type="SoftBody3D" parent="."]
transform = Transform3D(-4.37047e-08, -0.999848, 0.0174524, 1, -4.37114e-08, 0, 7.62869e-10, 0.0174524, 0.999848, -0.486118, 0.00691203, -0.00147587)
mesh = SubResource("QuadMesh_ig7tw")
simulation_precision = 30
pinned_points = [0, 1]
attachments/0/point_index = 0
attachments/0/spatial_attachment_path = NodePath("../Marker1")
attachments/0/offset = Vector3(0.0138054, 0.0060505, -0.0102021)
attachments/1/point_index = 1
attachments/1/spatial_attachment_path = NodePath("../Marker0")
attachments/1/offset = Vector3(0.0138055, 0.00243601, -0.0102021)

[node name="Marker1" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.500862, 0)

[node name="Marker0" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.495524, 0)

[node name="rotate" type="Button" parent="."]
offset_right = 191.0
offset_bottom = 87.0
theme_override_font_sizes/font_size = 24
text = "rotate()"

[node name="rotate_object_local" type="Button" parent="."]
offset_left = 206.0
offset_top = 2.0
offset_right = 397.0
offset_bottom = 89.0
theme_override_font_sizes/font_size = 24
text = "rotate_object_local()"

[node name="rotate_whatever" type="Button" parent="."]
offset_left = 459.0
offset_top = 3.0
offset_right = 700.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 24
text = "move_whatever()"

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0xm2m")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-4.37114e-08, -0.422618, 0.906308, 0, 0.906308, 0.422618, -1, 1.84732e-08, -3.9616e-08, 1.755, 1.224, 0.57)

[connection signal="pressed" from="rotate" to="WindSourcePath" method="_on_button_pressed"]
[connection signal="pressed" from="rotate_object_local" to="WindSourcePath" method="_on_rotate_object_local_pressed"]
[connection signal="pressed" from="rotate_whatever" to="WindSourcePath" method="_on_rotate_whatever_pressed"]
